updated the tags for the profile cards to have correct spacing

--- a/app/assets/stylesheets/components/_profile_card.scss
+++ b/app/assets/stylesheets/components/_profile_card.scss
@@ -28,21 +28,22 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 14px;
   padding: 8px 12px;
   border-radius: 8px;
   background-color: rgb(225, 241, 205);
-  width: 100px;
+  width: 90px;
   margin-bottom: 24px;
   margin-top: 8px;
   white-space: nowrap;
 }
 
 .plant-sitter {
-  margin-right: 4%;
+  margin-right: 4px;
 }
 
 .advisor {
-  margin-left: 4%;
+  margin-left: 4px;
 }
 
 .profile-experience {
